--- a/package.json
+++ b/package.json
@@ -89,6 +89,9 @@
       "vue-tsc": "^2.1.10",
       "ws": ">=8.17.1"
     },
+   "engines": {
+  "node": ">=18.17.0 <=22.x"
+    },
     "patchedDependencies": {
       "bull@4.12.1": "patches/bull@4.12.1.patch",
       "pkce-challenge@3.0.0": "patches/pkce-challenge@3.0.0.patch",
